--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "anvaad-js": "^1.4.3",
+    "firebase": "^10.5.2",
+    "firebase-tools": "^12.8.0",
     "jest": "^29.7.0",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
   },
   "devDependencies": {
+    "@types/glob": "^8.1.0",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
