--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -24,8 +24,10 @@ jobs:
       - run: |
           # cd ./
           yarn install --frozen-lockfile && yarn run build
-      - name: Deploy to Firebase
-        run: |
-          yarn global add firebase-tools
-          firebase login:ci --no-localhost
-          firebase deploy --project ${{ secrets.REACT_APP_PROJECT_ID }} --token ${{ secrets.FIREBASE_SERVICE_ACCOUNT_GURMUKHI_DEV }}
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          entryPoint: ./
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_GURMUKHI_DEV }}'
+          channelId: live
+          projectId: '${{ secrets.REACT_APP_PROJECT_ID }}'
