--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -31,3 +31,5 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}'
           projectId: '${{ secrets.REACT_APP_PROJECT_ID }}'
           target: dev
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
