--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 # Logs
-logs
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -41,8 +40,6 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-
-# Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
 
 # TypeScript cache
@@ -77,7 +74,7 @@ web_modules/
 .env.development.local
 .env.test.local
 .env.production.local
-.env.local
+.env.staging.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -94,7 +91,6 @@ dist
 # Gatsby files
 .cache/
 # Comment in the public line in if your project uses Gatsby and not Next.js
-# https://nextjs.org/blog/next-9-1#public-directory-support
 # public
 
 # vuepress build output
@@ -128,3 +124,12 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+#misc
+.DS_Store
+
+# dependencies
+/build
+
+.firebase
+gurmukhi-dev-firebase-*.json
