--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "jest": "^29.7.0",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "@types/node": "latest",
