--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "jest": "^29.7.0",
     "next": "latest",
     "react": "latest",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "latest",
     "sharp": "^0.32.6"
   },
   "devDependencies": {
     "@types/node": "latest",
     "@types/react": "latest",
+    "@types/react-beautiful-dnd": "^13.1.7",
     "@types/react-dom": "latest",
     "autoprefixer": "latest",
     "eslint": "latest",
