--- a/package.json
+++ b/package.json
@@ -18,17 +18,13 @@
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "anvaad-js": "^1.4.3",
-    "firebase": "^10.5.2",
-    "firebase-functions": "^4.5.0",
-    "firebase-tools": "12.6.2",
     "jest": "^29.7.0",
-    "next": "13.4.7",
+    "next": "latest",
     "react": "latest",
     "react-dom": "latest",
     "sharp": "^0.32.6"
   },
   "devDependencies": {
-    "@types/glob": "^8.1.0",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
