--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,16 +31,7 @@
       "react/no-array-index-key": [0],
       "no-console": "off",
       "no-alert": "off",
-      "import/extensions": [
-        "error",
-        "ignorePackages",
-        {
-          "js": "never",
-          "jsx": "never",
-          "ts": "never",
-          "tsx": "never"
-        }
-      ],
+      "import/extensions": "off",
       "@typescript-eslint/no-empty-function": "off",
       "@typescript-eslint/no-explicit-any": "off"
     },
