--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -24,8 +24,7 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_GURMUKHI_DEV }}'
           channelId: live
           projectId: '${{ secrets.REACT_APP_PROJECT_ID }}'
-          entryPoint: ./
-          target: dev
+          target: default
 
   staging:
     runs-on: ubuntu-latest
@@ -39,8 +38,7 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_GURMUKHI_DEV }}'
           channelId: live
           projectId: '${{ secrets.REACT_APP_PROJECT_ID }}'
-          entryPoint: ./
-          target: staging
+          target: default
 
   prod:
     runs-on: ubuntu-latest
@@ -54,5 +52,4 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_GURMUKHI_DEV }}'
           channelId: live
           projectId: '${{ secrets.REACT_APP_PROJECT_ID }}'
-          entryPoint: ./
-          target: prod
+          target: default
