--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,7 @@
       "es6": true
     },
     "rules": {
-      "indent": ["error", 2],
+      "indent": ["error", 2, { "SwitchCase": 1 }],
       "react/jsx-filename-extension": [0],
       "react/no-array-index-key": [0],
       "no-console": "off",
