--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -11,17 +11,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: yarn install --frozen-lockfile && yarn run build
-      - name: Install Firebase CLI
-        run: |
-          npm install -g firebase-tools
-      - name: Deploy with Firebase CLI
-        run: |
-          branchName=$(echo "${{ github.ref_name }}" | sed -e "s/refs\/heads\///g")
-          echo "Branch Name: $branchName"
-          firebase hosting:channel:deploy $branchName --only default --project ${{ secrets.REACT_APP_PROJECT_ID }} --token ${{ secrets.FIREBASE_TOKEN }}
-      # - uses: FirebaseExtended/action-hosting-deploy@v0
-      #   with:
-      #     repoToken: '${{ secrets.GITHUB_TOKEN }}'
-      #     firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_GURMUKHI_DEV }}'
-      #     projectId: '${{ secrets.REACT_APP_PROJECT_ID }}'
-      #     target: default
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_GURMUKHI_DEV }}'
+          channelId: 'pr-${{ github.event.number }}'
+          projectId: '${{ secrets.REACT_APP_PROJECT_ID }}'
+          target: default
+        env:
+          FIREBASE_CLI_PREVIEWS: hostingchannels
