--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^7.1.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
@@ -18,17 +19,19 @@
     "anvaad-js": "^1.4.3",
     "firebase": "^10.6.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
     "lint": "eslint src/**/*.ts{,x} --max-warnings 0",
-    "start": "yarn build:css && react-scripts start",
-    "build": "yarn build:css && react-scripts build",
-    "test": "CI=true react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "start": "yarn build:css && craco start",
+    "build": "yarn build:css && craco build",
+    "test": "CI=true craco test --env=jsdom",
+    "eject": "craco eject",
     "build:css": "postcss src/styles/*.scss -o src/styles/style.css"
   },
   "eslintConfig": {
@@ -51,6 +54,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/react-beautiful-dnd": "^13.1.7",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
