added sign in with google

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,12 +19,17 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": {
+        "@/*": [
+            "./src/*"
+        ]
+    }
   },
   "include": [
     "src"
   ],
   "exclude": [
     "node_modules"
-  ],
-  "extends": "./tsconfig.paths.json"
+  ]
 }
