--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,7 +34,8 @@
       "import/extensions": "off",
       "react-hooks/exhaustive-deps": "off",
       "@typescript-eslint/no-empty-function": "off",
-      "@typescript-eslint/no-explicit-any": "off"
+      "@typescript-eslint/no-explicit-any": "off",
+      "@typescript-eslint/quotes": "off"
     },
     "settings": {
       "react": {
