--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-i18next": "^13.5.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
