--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "anvaad-js": "^1.4.3",
     "firebase": "^10.6.0",
     "i18next": "^23.7.8",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-confetti": "^6.1.0",
@@ -29,6 +30,7 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "redux-persist": "^6.0.0",
     "reduxjs-toolkit-persist": "^7.2.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
