--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -23,6 +23,8 @@ jobs:
       REACT_APP_MESSAGING_SENDER_ID: ${{ secrets.REACT_APP_MESSAGING_SENDER_ID }}
       REACT_APP_APP_ID: ${{ secrets.REACT_APP_APP_ID }}
       REACT_APP_MEASUREMENT_ID: ${{ secrets.REACT_APP_MEASUREMENT_ID }}
+      REACT_APP_BACKEND_API_URL: ${{ secrets.REACT_APP_BACKEND_API_URL }}
+      NARAKEET_TTS_API_KEY: ${{ secrets.NARAKEET_TTS_API_KEY }}
     steps:
       - uses: actions/checkout@v3
       - run: yarn install --frozen-lockfile && yarn run build
@@ -44,6 +46,8 @@ jobs:
       REACT_APP_MESSAGING_SENDER_ID: ${{ secrets.REACT_APP_MESSAGING_SENDER_ID }}
       REACT_APP_APP_ID: ${{ secrets.REACT_APP_APP_ID }}
       REACT_APP_MEASUREMENT_ID: ${{ secrets.REACT_APP_MEASUREMENT_ID }}
+      REACT_APP_BACKEND_API_URL: ${{ secrets.REACT_APP_BACKEND_API_URL }}
+      NARAKEET_TTS_API_KEY: ${{ secrets.NARAKEET_TTS_API_KEY }}
     steps:
       - uses: actions/checkout@v3
       - run: yarn install --frozen-lockfile && yarn run build
@@ -65,6 +69,8 @@ jobs:
       REACT_APP_MESSAGING_SENDER_ID: ${{ secrets.REACT_APP_MESSAGING_SENDER_ID }}
       REACT_APP_APP_ID: ${{ secrets.REACT_APP_APP_ID }}
       REACT_APP_MEASUREMENT_ID: ${{ secrets.REACT_APP_MEASUREMENT_ID }}
+      REACT_APP_BACKEND_API_URL: ${{ secrets.REACT_APP_BACKEND_API_URL }}
+      NARAKEET_TTS_API_KEY: ${{ secrets.NARAKEET_TTS_API_KEY }}
     steps:
       - uses: actions/checkout@v3
       - run: yarn install --frozen-lockfile && yarn run build
