--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "anvaad-js": "^1.4.3",
-    "axios": "^1.6.5",
+    "axios": "^1.6.7",
+    "dotenv": "^16.4.1",
     "firebase": "^10.6.0",
     "i18next": "^23.7.8",
     "moment": "^2.30.1",
