--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,5 @@ REACT_APP_STORAGE_BUCKET="<TODO>",
 REACT_APP_MESSAGING_SENDER_ID="<TODO>",
 REACT_APP_APP_ID="<TODO>",
 REACT_APP_MEASUREMENT_ID="<TODO>",
+REACT_APP_BACKEND_API_URL="<TODO>",
+NARAKEET_TTS_API_KEY="<TODO>"
