--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "anvaad-js": "^1.4.3",
+    "axios": "^1.6.7",
     "firebase": "^10.6.0",
     "i18next": "^23.7.8",
     "moment": "^2.30.1",
