--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
     "jsx": "react-jsx",
     "types": ["jest"]
   },
-  "include": ["src"],
+  "include": ["src", "__mocks__"],
   "exclude": ["node_modules"]
 }
