fix: change database ids to be fetched from env

--- a/.env.sample
+++ b/.env.sample
@@ -8,4 +8,6 @@ REACT_APP_APP_ID="<TODO>",
 REACT_APP_MEASUREMENT_ID="<TODO>",
 REACT_APP_BACKEND_API_URL="<TODO>",
 NARAKEET_TTS_API_KEY="<TODO>",
-REACT_APP_BUGSNAG_API_KEY="<TODO>"
+REACT_APP_BUGSNAG_API_KEY="<TODO>",
+REACT_APP_WORDS_DATABASE_ID="<TODO>",
+REACT_APP_USERS_DATABASE_ID="<TODO>"
