--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,7 +40,8 @@
     "webpack.config.js",
     "postcss.config.js",
     "tailwind.config.js",
-    "jest.config.js"
+    "jest.config.js",
+    "scripts/*"
   ]
 }
   
