--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "anvaad-js": "^1.4.3",
     "axios": "^1.6.7",
     "firebase": "^10.6.0",
+    "firebase-admin": "^12.1.0",
     "i18next": "^23.7.8",
     "moment": "^2.30.1",
     "react": "^18.2.0",
