--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,7 +41,8 @@
     "postcss.config.js",
     "tailwind.config.js",
     "jest.config.js",
-    "scripts/*"
+    "scripts/*",
+    "__mocks__"
   ]
 }
   
