added jsdom testing

--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^2.0.1",
     "@shopify/react-web-worker": "^5.0.13",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^15.0.5",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react-dom": "^18.3.0",
     "anvaad-js": "^1.4.3",
     "axios": "^1.6.7",
     "firebase": "^10.6.0",
@@ -91,6 +91,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.3.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "node-sass": "^9.0.0",
     "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
