--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -23,7 +23,7 @@ jobs:
       REACT_APP_MESSAGING_SENDER_ID: ${{ secrets.REACT_APP_MESSAGING_SENDER_ID }}
       REACT_APP_APP_ID: ${{ secrets.REACT_APP_APP_ID }}
       REACT_APP_MEASUREMENT_ID: ${{ secrets.REACT_APP_MEASUREMENT_ID }}
-      REACT_APP_BACKEND_API_URL: ${{ secrets.REACT_APP_BACKEND_API_URL }}
+      REACT_APP_BACKEND_API_URL: "https://us-central1-${{ secrets.REACT_APP_PROJECT_ID }}.cloudfunctions.net/api/"
       NARAKEET_TTS_API_KEY: ${{ secrets.NARAKEET_TTS_API_KEY }}
       REACT_APP_BUGSNAG_API_KEY: ${{ secrets.REACT_APP_BUGSNAG_API_KEY }}
     steps:
@@ -47,7 +47,7 @@ jobs:
       REACT_APP_MESSAGING_SENDER_ID: ${{ secrets.REACT_APP_MESSAGING_SENDER_ID }}
       REACT_APP_APP_ID: ${{ secrets.REACT_APP_APP_ID }}
       REACT_APP_MEASUREMENT_ID: ${{ secrets.REACT_APP_MEASUREMENT_ID }}
-      REACT_APP_BACKEND_API_URL: ${{ secrets.REACT_APP_BACKEND_API_URL }}
+      REACT_APP_BACKEND_API_URL: "https://us-central1-${{ secrets.REACT_APP_PROJECT_ID }}.cloudfunctions.net/api/"
       NARAKEET_TTS_API_KEY: ${{ secrets.NARAKEET_TTS_API_KEY }}
       REACT_APP_BUGSNAG_API_KEY: ${{ secrets.REACT_APP_BUGSNAG_API_KEY }}
     steps:
@@ -71,7 +71,7 @@ jobs:
       REACT_APP_MESSAGING_SENDER_ID: ${{ secrets.REACT_APP_MESSAGING_SENDER_ID }}
       REACT_APP_APP_ID: ${{ secrets.REACT_APP_APP_ID }}
       REACT_APP_MEASUREMENT_ID: ${{ secrets.REACT_APP_MEASUREMENT_ID }}
-      REACT_APP_BACKEND_API_URL: ${{ secrets.REACT_APP_BACKEND_API_URL }}
+      REACT_APP_BACKEND_API_URL: "https://us-central1-${{ secrets.REACT_APP_PROJECT_ID }}.cloudfunctions.net/api/"
       NARAKEET_TTS_API_KEY: ${{ secrets.NARAKEET_TTS_API_KEY }}
       REACT_APP_BUGSNAG_API_KEY: ${{ secrets.REACT_APP_BUGSNAG_API_KEY }}
     steps:
