--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,6 +42,7 @@
     "postcss.config.js",
     "tailwind.config.js",
     "jest.config.js",
+    "jest.setup.js",
     "scripts/*",
     "__mocks__"
   ]
